--- a/WPF Client/XPence/XPence.Shared/UIText.resx
+++ b/WPF Client/XPence/XPence.Shared/UIText.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ABOUT_WINDOW_HEADER" xml:space="preserve">
-    <value>About XPense</value>
+    <value>About XPence</value>
   </data>
   <data name="ACCENT_SELECT_LABEL_TEXT" xml:space="preserve">
     <value>My Accent</value>
